--- a/src/main/resources/assets/flowstone/lang/en_US.lang
+++ b/src/main/resources/assets/flowstone/lang/en_US.lang
@@ -1,1 +1,2 @@
-item.unstabelFlowstone.name=Flowstone Mixture
+item.unstableFlowstone.name=Flowstone Mixture (Unstable)
+item.energizedFlowstone.name=Flowstone Mixture (Energized)
