--- a/src/main/resources/assets/flowstone/lang/en_US.lang
+++ b/src/main/resources/assets/flowstone/lang/en_US.lang
@@ -1,5 +1,7 @@
 item.unstableFlowstone.name=Flowstone Mixture (Unstable)
 item.energizedFlowstone.name=Flowstone Mixture (Energized)
 item.explodingFlowstone.name=Flowstone Mixture (Explosive)
+item.opFlowstone.name=[WIP] Flowstone Mixture (Mystery)
+item.trollFlowstone.name=[WIP] Flowstone Mixture (Mystery)
 item.mystFlowstone.name=Flowstone Mixture (Mystery)
 item.flowstoneExtractor.name=Flowstone Extractor
