--- a/src/main/resources/assets/flowstone/lang/en_US.lang
+++ b/src/main/resources/assets/flowstone/lang/en_US.lang
@@ -5,3 +5,4 @@ item.opFlowstone.name=[WIP] Flowstone Mixture (Mystery)
 item.trollFlowstone.name=[WIP] Flowstone Mixture (Mystery)
 item.mystFlowstone.name=Flowstone Mixture (Mystery)
 item.flowstoneExtractor.name=Flowstone Extractor
+tile.flowstoneGlass.name=Flowstone Glass
